--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "dependencies": {
     "discord.js": "^14.15.3",
-    "dotenv": "^16.4.5",
-    "typescript": "^5.5.3"
+    "dotenv": "^16.4.5"
   },
   "name": "gachabot",
   "description": "",
