--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 BOT_TOKEN=MTI2MDE2NDQ0NzU0MDg3NTI5NA.GCM3Rt.a-KBjsw03qWAWMdoSKawYdlsdkUhCR9KyL9szE
 CLIENT_ID=1260164447540875294
 GUILD_ID=1209889694108880917
+
+DB_USER=SJKD
+DB_HOST=discordbots.cvu8488i0bhs.us-east-2.rds.amazonaws.com
+DB_NAME=GachaDB
+DB_PASSWORD=TyTyTy1423
+DB_PORT=5432
