--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
     "axios": "^1.7.2",
+    "cloudinary": "^2.4.0",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "sharp": "^0.33.5",
+    "uuid": "^10.0.0"
   },
   "name": "gachabot",
   "description": "",
@@ -18,6 +21,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/pg": "^8.11.6"
+    "@types/pg": "^8.11.6",
+    "@types/uuid": "^10.0.0"
   }
 }
